[package]
name = "vipps-api"
version = "0.1.0"
authors = ["Birk Tjelmeland <birk@arkyta.no>"]
edition = "2021"

[features]
mock = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

time = "0.3"
uuid =  { version = "1", features = ["v4"] }

tracing = "0.1"

reqwest = { version = "0.12", features = ["json"] }
